# coap-broker

./: CMakeLists.txt  Makefile  Makefile~  a.c  a.c~  af_ieee802154.h  client-6lo.c  client-coap  client-coap.c  client-tes.c  coapserver-niko.c  getaddr  helloworld.c  listener.c  readme.md  server-6lo.c  server-6lo.c~  server-6lo.out  talker.c  tes-client
cgi-bin-raspi/: Makefile  client-asli.c  sensorNode.h  soc_server.c  soc_server_detach.c
cmake/: FindCoAP.cmake
coba-program/: Makefile  client-exp.c  client-tes  client.c  cmdline.h  coap-client  coap-server  gpio.py  node.py  panggil-client.c  pemanggil  sensorNode.c  sensorNode.h  serProg  serial.c  serv-exp.c  server-tes  server.c
coba-program/program_arduino/: program_arduino.ino
dalem-apache/: .htaccess~  client-asli.c  soc_server.c
htdocs-ubuntu/: .htaccess  Makefile~  client-asli.c  client-tes  client.c  coap-client  cunt.php  imogen.php  index.c  index.cgi  kancut.php  node.py  sensorNode.c~  server  server-tes  soc_server.c  start.py  start.py~  tes.php
htdocs-ubuntu/hc/: Makefile  index.c  penghubung  penghubung.c  tes-executor  tes-executor.c  tes.c~
htdocs-ubuntu/tes/: tes-c.c~  tes-json.php  tes.html
include/: CoAPBroker.hpp  CoAPRD.hpp  CoAPResource.hpp  CoAPServer.hpp  EString.hpp  LibcoapMod.h  LibcoapMod.hpp  LinkFormatParser.hpp  LinkedListDB.hpp  UString.hpp
include/c/: CoAPRD.h  LinkFormatParser.h  LinkedListDB.h
include/cpp/: Address.hpp  Attribute.hpp  BrokerResource.hpp  LibcoapMod.hpp  LinkFormat.hpp  LinkFormatParser.hpp  Option.hpp  OptionList.hpp  ProtocolDataUnit.hpp  Resource.hpp  Server.hpp  UString.hpp
misc/experimental/: bitwise-test.c  linked-list.c  option_parser.c  semi-oop-in-c.c  time.c
misc/experimental/sensor/: actuator-controller.py  actuator-gpio.py  actuator.py  gpio-observe-controller.py
misc/previous-work/bintang/: Makefile  coapserver-bintang  serial  tes
misc/previous-work/bintang/cgi-bin-raspi/: CoAP_server.c  coap-server  sensorNode.c  serv-exp.c
misc/previous-work/bintang/coba-program/: cache.c  client-tes  serProg  serial.c  server-tes
misc/previous-work/bintang/coba-program/program_arduino/: program_arduino.ino
misc/previous-work/bintang/dalem-apache/: .htaccess  cache.h
misc/previous-work/bintang/htdocs-ubuntu/: cache.c  cache.h  client-exp.c  coap-server  first.cgi  serv-exp.c~
misc/previous-work/bintang/tes-coap/: client-asli.c  main.c~
misc/previous-work/bintang/tes-sensor/: dua.c  sensorNode.c
misc/raspberry-pi-autorun/rpi-master-script/: start.sh  terminator.sh
misc/raspberry-pi-autorun/rpi-slave-script/: crontab-example.txt
misc/system-testing-src/: coap-broker-tester.sh  coap-pubsub-request.sh  log8
previous-work/bintang/: coapserver-bintang.c  cobain-client-coap.c  listener.c  serverniko
previous-work/bintang/cgi-bin-raspi/: Makefile  client-asli.c  soc_server.c
previous-work/bintang/coba-program/: arduino.c  cmdline.c  coap-client  sensorNode.c  serv-exp.c  shit.py
previous-work/bintang/htdocs-ubuntu/: index-tadinya.cgi  kancut.php~  sensorNode.c  serv-exp.c  tesCli
previous-work/bintang/htdocs-ubuntu/hc/: hello-server.cgi
previous-work/bintang/htdocs-ubuntu/tes/: tes-decode.php
previous-work/bintang/tes-coap/: Makefile  cmdline.h
references/bintang/: coapserver-niko.c  contoh  server-6lo.c~
references/bintang/cgi-bin-raspi/: soc_server_detach.c
references/bintang/coba-program/: Makefile  Makefile~  cache.h  client-exp.c  tesPy.py
references/bintang/dalem-apache/: cache.c
references/bintang/htdocs-ubuntu/: client-exp.c~
references/bintang/htdocs-ubuntu/hc/: echoc.c  index.cgi  tes
references/bintang/htdocs-ubuntu/tes/: c-json.cgi  tes  tes-c.c
references/bintang/settingan-raspi/: mrf24j40-overlay.dts
references/bintang/tes-coap/: client_misc.h
settingan raspi/: catatan.txt
settingan-raspi/: aktifasi_wpan.sh  catatan.txt
src/: CoAPBroker.cpp  CoAPRD.c  CoAPRD.cpp  CoAPResource.cpp  CoAPServer.cpp  EString.cpp  LibcoapMod.cpp  LinkFormatParser.c  LinkFormatParser.cpp  LinkedListDB.cpp  UString.cpp  coap-broker.c  coap-broker.cpp  experimental.cpp
src/c/: LibcoapMod.c  LinkFormatParser.c  LinkedListDB.c
src/coap/: compile
src/coap/src/: coap-broker-resource-check.c  coap-broker.c
src/cpp/: Address.cpp  Attribute.cpp  BrokerResource.cpp  CoAPRD.cpp.old  LibcoapMod.cpp  LinkFormat.cpp  LinkFormatParser.cpp  LinkedListDB.cpp  Option.cpp  OptionList.cpp  ProtocolDataUnit.cpp  Resource.cpp  Server.cpp  UString.cpp
src/cpp/main/: coap-broker.cpp  experimental.cpp
src/misc/: readme.md
src/misc/rpi-master-script/: start-telegram.sh  telegram_bot.py
src/misc/rpi-slave-script/: lowpan_if.sh  lowpan_if.sh.save
src/misc/system-testing/: coap-get-request.sh  coap-pubsub-request.sh  coap-system-test.sh  node-list
src/mqtt/src/: a.out  publisher-thread.c
src/sensors/: bmp280-dht22-coap-client.py  gpio-observe-controller-final.py  tsl2561-mq2-coap-client.py
src/testing/src/: basic-coap-client.c  basic-coap-server.c  coap-broker-resource-check.c  coap-client.cpp  coap-client.py  coap-server-prototype.c  coap-server-simplified.c
tes-coap/: Makefile~  client-asli  client_misc.c  cmdline.c  cmdline.h  main.c  tes
tes-sensor/: Makefile  dua.c  main.c
(+10 files in other folders)
